[package]
name = "anchor_example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_example"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.13.2"
anchor-spl = "0.13.2"
solana-program = "1.7.8"
spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.7.8"
solana-sdk = "1.7.8"
